--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: >
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/"><img src="/images/logo.png?" alt="LinkedIn" height="42" width="42"> View My LinkedIn Profile</a> 
-  
+  <a href="https://www.linkedin.com/in/luke-melville-9aba00118/"><img src="/images/icon_linkedin.png?" alt="LinkedIn" height="42" width="42"></a> 
+  <a href="https://github.com/LukeMev"><img src="/images/icon_github.png?" alt="LinkedIn" height="42" width="42"></a> 
+
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
