--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Luke Melville
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
-description: > 
+logo: "/images/logo.png?raw=true" 
+description: >
   First description 
   <br><br>
   Second description 
@@ -8,4 +8,4 @@ description: >
   <a href="https://www.linkedin.com/in/luke-melville-9aba00118/"><img src="/images/icon_linkedin.png?" alt="LinkedIn Icon" height="42" width="42"></a> 
   <a href="https://github.com/LukeMev"><img src="/images/icon_github.png?" alt="Github Icon" height="42" width="42"></a> 
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: UA-123694098-1 # your Google Analytics tracking ID here
