--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,4 @@ description: >
   <a href="https://github.com/LukeMev"><img src="/images/icon_github.png?" alt="LinkedIn Icon" height="32" width="32"></a> 
 theme: jekyll-theme-minimal
 google_analytics: UA-123694098-1 # your Google Analytics tracking ID here
+is_project_page: false
