--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 # Site Author
 author:
   name             : "Luke Melville"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-logo.jpg"
   bio              : "description here"
   location         : "Sheffield, UK"
   email            : #"LukeMelville@gmail.com"
@@ -291,6 +291,12 @@ compress_html:
   ignore:
     envs: development
 
+# For the collections stuff
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 
 # Defaults
 defaults:
@@ -305,4 +311,19 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 
