Portfolio base setup done

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,5 @@
 main:
   - title: "Portfolio"
-    url: /portfolio/
+    url: /
   - title: "CV"
     url: /cv/
-  - title: "Posts"
-    url: /posts/
